--- a/sysadmin/install_software.yml
+++ b/sysadmin/install_software.yml
@@ -7,28 +7,24 @@
         name: "*"
         state: latest
 
-    # Enable software repositories
+    # Enable RPM Fusion repositories
+    # Ref: https://rpmfusion.org/Configuration
     - name: Enable RPM Fusion free repository
       dnf:
-        name: https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ ansible_distribution_major_version }}.noarch.rpm
+        name: https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ ansible_distribution_major_version }}.noarch.rpm
         state: present
     - name: Enable RPM Fusion nonfree repository
       dnf:
-        name: https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ ansible_distribution_major_version }}.noarch.rpm
-        state: present
-    - name: Enable Flathub repository
-      flatpak_remote:
-        name: flathub
-        flatpakrepo_url: https://dl.flathub.org/repo/flathub.flatpakrepo
+        name: https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ ansible_distribution_major_version }}.noarch.rpm
         state: present
 
-    # Enable VS Code repository
+    # Enable Visual Studio Code repository
     # Ref: https://code.visualstudio.com/docs/setup/linux
     - name: Import Microsoft GPG key
       rpm_key:
         key: https://packages.microsoft.com/keys/microsoft.asc
         state: present
-    - name: Enable VS Code repository
+    - name: Enable Visual Studio Code repository
       yum_repository:
         name: code
         description: Visual Studio Code
@@ -37,6 +33,14 @@
         enabled: true
         gpgcheck: true
         gpgkey: https://packages.microsoft.com/keys/microsoft.asc
+
+    # Enable Flathub repository
+    # Ref: https://flathub.org/setup/Fedora
+    - name: Enable Flathub repository
+      flatpak_remote:
+        name: flathub
+        flatpakrepo_url: https://dl.flathub.org/repo/flathub.flatpakrepo
+        state: present
 
     # Install packages
     - name: Install GNOME Tweaks
@@ -71,7 +75,7 @@
       dnf:
         name: parallel
         state: present
-    - name: Install VS Code
+    - name: Install Visual Studio Code
       dnf:
         name: code
         state: present
