--- a/sysadmin/install_software.yml
+++ b/sysadmin/install_software.yml
@@ -8,11 +8,11 @@
     # - https://rpmfusion.org/keys
     # - https://rpmfusion.org/Configuration
     # - https://rpmfusion.org/Howto/NVIDIA
-    - name: Import FPM Fusion free GPG key
+    - name: Import RPM Fusion free GPG key
       ansible.builtin.rpm_key:
         key: /usr/share/distribution-gpg-keys/rpmfusion/RPM-GPG-KEY-rpmfusion-free-fedora-{{ ansible_distribution_major_version }}
         state: present
-    - name: Import FPM Fusion nonfree GPG key
+    - name: Import RPM Fusion nonfree GPG key
       ansible.builtin.rpm_key:
         key: /usr/share/distribution-gpg-keys/rpmfusion/RPM-GPG-KEY-rpmfusion-nonfree-fedora-{{ ansible_distribution_major_version }}
         state: present
