--- a/sysadmin/configure_system.yml
+++ b/sysadmin/configure_system.yml
@@ -37,4 +37,4 @@
           system-db:site
           system-db:distro
         dest: /etc/dconf/profile/user
-        mode: preserve
+        mode: u=rw,g=r,o=r
