feat(sysadmin): install multimedia libraries

--- a/sysadmin/install_software.yml
+++ b/sysadmin/install_software.yml
@@ -168,6 +168,12 @@
         name: opentofu
         state: present
 
+    # Ref: https://docs.fedoraproject.org/en-US/quick-docs/installing-plugins-for-playing-movies-and-music/
+    - name: Install Multimedia Libraries
+      ansible.builtin.dnf:
+        name: '@Multimedia'
+        state: present
+
     - name: Remove Rhythmbox
       ansible.builtin.dnf:
         name: rhythmbox
