--- a/sysadmin/install_software.yml
+++ b/sysadmin/install_software.yml
@@ -171,7 +171,7 @@
     # Ref: https://docs.fedoraproject.org/en-US/quick-docs/installing-plugins-for-playing-movies-and-music/
     - name: Install Multimedia Libraries
       ansible.builtin.dnf:
-        name: '@Multimedia'
+        name: "@Multimedia"
         state: present
 
     - name: Remove Rhythmbox
