feat(sysadmin): install Azure CLI

--- a/sysadmin/install_software.ansible.yml
+++ b/sysadmin/install_software.ansible.yml
@@ -148,6 +148,11 @@
         name: gh
         state: present
 
+    - name: Install Azure CLI
+      ansible.builtin.dnf:
+        name: azure-cli
+        state: present
+
     - name: Install Ansible
       ansible.builtin.dnf:
         name: ansible
